--- a/LInq_Payroll/LInq_Payroll.csproj
+++ b/LInq_Payroll/LInq_Payroll.csproj
@@ -107,7 +107,6 @@
     <Content Include="cdn.rawgit.com\bpampuch\pdfmake\0.1.18\build\vfs_fonts.js" />
     <Content Include="cdn.rawgit.com\google\code-prettify\master\loader\run_prettifyaf02.js" />
     <Content Include="cdnjs.cloudflare.com\ajax\libs\jszip\2.5.0\jszip.min.js" />
-    <Content Include="company.aspx" />
     <Content Include="country.aspx" />
     <Content Include="css\animate.css" />
     <Content Include="css\colors\blue.css" />
@@ -206,6 +205,7 @@
     <Content Include="less\icons\weather-icons\font\weathericons-regular-webfont.woff" />
     <Content Include="less\icons\weather-icons\font\weathericons-regular-webfont.woff2" />
     <Content Include="less\icons\weather-icons\font\weathericons-regular-webfontd41d.eot" />
+    <Content Include="state.aspx" />
     <Content Include="www.youtube.com\watch7d1c.html" />
     <Content Include="plugins\bower_components\footable\css\fonts\footable.eot" />
     <Content Include="plugins\bower_components\footable\css\fonts\footable.ttf" />
@@ -492,13 +492,6 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="company.aspx.cs">
-      <DependentUpon>company.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="company.aspx.designer.cs">
-      <DependentUpon>company.aspx</DependentUpon>
-    </Compile>
     <Compile Include="country.aspx.cs">
       <DependentUpon>country.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -526,6 +519,13 @@
       <DependentUpon>master.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="state.aspx.cs">
+      <DependentUpon>state.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="state.aspx.designer.cs">
+      <DependentUpon>state.aspx</DependentUpon>
+    </Compile>
     <Compile Include="usercontrols\footer.ascx.cs">
       <DependentUpon>footer.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
