--- a/LInq_Payroll/LInq_Payroll.csproj
+++ b/LInq_Payroll/LInq_Payroll.csproj
@@ -572,7 +572,9 @@
       <DependentUpon>sidebar.ascx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="company_logo\" />
+  </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
